version using only rest and last, both to index and to create arrays